Fix page links not aligned with the content
Closes #342.

--- a/assets/css/src/content.css
+++ b/assets/css/src/content.css
@@ -93,7 +93,7 @@
 
 .page-links {
 	clear: both;
-	margin: 0 0 1.5em;
+	margin-bottom: 1.5em;
 }
 
 .entry-footer span {
